# Apollonia

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
include/: api.h  database.h
include/interfaces/: album_presenter.h  album_repository.h  file_service.h  playlist_presenter.h  playlist_repository.h  song_presenter.h  song_repository.h
include/model/: file_service.h  old.file_service.h
include/model/repository/: apollo_repository.h  db_manager.h  entities.h  repository.h  repository_exceptions.h  song_repository.h
include/model/repository/dao/: albums.h  lyrics.h  playlist_songs.h  playlists.h  songs.h  songs_meta.h
include/presenter/: apollo_presenter.h  presenter.cpp  presenter.h  song_presenter.h
include/view/: routes.h
initer_src/: fs.cpp  fs.h  init_db.h  main.cpp
src/: api.cpp  database.cpp  main.cpp
src/model/: file_service.cpp  old.file_service.cpp
src/model/repository/: apollo_repository.cpp  db_manager.cpp  song_repository.cpp
src/model/repository/dao/: albums.cpp  lyrics.cpp  playlist_songs.cpp  playlists.cpp  songs.cpp  songs_meta.cpp
src/presenter/: apollo_presenter.cpp
src/view/: routes.cpp
temp/view/: routes.cpp  routes.h
tests/: test_album_dao.cpp  test_db_manager.cpp  test_lyrics_dao.cpp  test_playlist_dao.cpp  test_playlist_song_dao.cpp  test_song_dao.cpp  test_song_meta_dao.cpp
tests/dao/: test_album_dao.cpp  test_db_manager.cpp  test_lyrics_dao.cpp  test_playlist_dao.cpp  test_playlist_song_dao.cpp  test_song_dao.cpp  test_song_meta_dao.cpp
